added pocketbase integration and logic

--- a/Svelte/package.json
+++ b/Svelte/package.json
@@ -27,5 +27,8 @@
 		"tailwindcss": "^4.1.13",
 		"typescript": "^5.0.0",
 		"vite": "^7.0.4"
+	},
+	"dependencies": {
+		"pocketbase": "^0.26.2"
 	}
 }
