serving images from nginx to the website is done

--- a/Nginx/dev-nginx.conf
+++ b/Nginx/dev-nginx.conf
@@ -13,6 +13,10 @@ http {
     server {
         listen 80;
 
+        location /public {
+            alias /srv/images/;
+            try_files $uri $uri/ =404;
+        }
         location /db {
             return 307 /db/api/_/;
             # redirect to the block below this
