--- a/Nginx/prod-nginx.conf
+++ b/Nginx/prod-nginx.conf
@@ -31,6 +31,10 @@ http {
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 10m;
 
+        location /public {
+            alias /srv/images/;
+            try_files $uri $uri/ =404;
+        }
         
         # svelte reverse proxy
         location / {
