--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
     container_name: nginx-dev
     volumes:
       - ./Nginx/dev-nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./images:/srv/images
     ports:
       - "80:80"
     depends_on:
