modified .gitignore and deleted an accidentaly pushed image

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ shared-volumes/letsencrypt
 !shared-volumes/letsencrypt/.afk
 shared-volumes/certbot-www
 !shared-volumes/certbot-www/.afk
+images/*
+!images/.afk
