--- a/Svelte/package.json
+++ b/Svelte/package.json
@@ -29,7 +29,7 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
-		"dompurify": "^3.2.7",
+		"isomorphic-dompurify": "^2.28.0",
 		"marked": "^16.3.0",
 		"pocketbase": "^0.26.2"
 	}
