--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@ shared-volumes/certbot-www
 images/*
 !images/.afk
 todo.md
+# macOS / Finder junk
+.DS_Store
+._*
+.Spotlight-V100
+.Trashes
+
+# Editor/OS caches
+*.log
